# Simple-Rag-App

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  ingest.py  main.py  pyproject.toml  requirements.txt  retrieve.py
