[project]
name = "noai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.12.2",
    "streamlit>=1.58.0",
]
